--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@mantine/hooks": "^5.4.1",
     "@mantine/next": "^5.4.1",
     "@mantine/notifications": "^5.4.1",
+    "@notionhq/client": "^2.2.0",
     "@tabler/icons": "^1.100.0",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "next": "12.3.1",
+    "radash": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
