--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "next": "12.3.1",
+    "next-usequerystate": "^1.7.2",
     "radash": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
