--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "next": "12.3.1",
